# rl_snake-master

./: README.md  _1.html  _notes.txt  _run.py  _scrape.py  _steps.txt  const.js  consts.py  game.js  index.html  pyproject.toml  requirements.txt  snake_env.py  snake_game copy.py  snake_game.py  train_snake.py
logs/: info.json
